--- a/paper.tex
+++ b/paper.tex
@@ -448,75 +448,42 @@ In the remaining of the paper, the following notations are used. $\mathcal{S} = 
         \label{eq:update-inv}
             (Forward update rule for inverse of covariance matrix)
             \begin{equation*}
-                \fbox{$
                 (\boldsymbol{\Sigma}^{(k)})^{-1} =
                 \bigg[\begin{array}{cc}
                 A & v \\
                 v^t  & \frac{1}{\alpha} \\
                 \end{array}\bigg]
-                $}
             \end{equation*}
         \end{prop}
-        where $A = \textcolor[rgb]{0,0.5,0}{(\boldsymbol{\Sigma}^{(k-1)})^{-1}} + \frac{1}{\alpha} \textcolor[rgb]{0,0.5,0}{(\boldsymbol{\Sigma}^{(k-1)})^{-1}} \mathbf{u} \mathbf{u}^t \textcolor[rgb]{0,0.5,0}{(\boldsymbol{\Sigma}^{(k-1)})^{-1}}$, $v = - \frac{1}{\alpha} \textcolor[rgb]{0,0.5,0}{(\boldsymbol{\Sigma}^{(k-1)})^{-1}} \mathbf{u}$ and $ \alpha = \sigma_{kk} - \mathbf{u}^t \textcolor[rgb]{0,0.5,0}{(\boldsymbol{\Sigma}^{(k-1)})^{-1}} \mathbf{u} $.
+        where $A = \textcolor[rgb]{0,0.5,0}{(\boldsymbol{\Sigma}^{(k-1)})^{-1}} + \frac{1}{\alpha} \textcolor[rgb]{0,0.5,0}{(\boldsymbol{\Sigma}^{(k-1)})^{-1}} \mathbf{u} \mathbf{u}^t \textcolor[rgb]{0,0.5,0}{(\boldsymbol{\Sigma}^{(k-1)})^{-1}}$, $v = - \frac{1}{\alpha} \textcolor[rgb]{0,0.5,0}{(\boldsymbol{\Sigma}^{(k-1)})^{-1}} \mathbf{u}$ and $ \alpha = \sigma_{kk} - \mathbf{u}^t \textcolor[rgb]{0,0.5,0}{(\boldsymbol{\Sigma}^{(k-1)})^{-1}} \mathbf{u}$.
 
         It means that, to select a variable among one hundred, instead of computing one hundred times $(\boldsymbol{\Sigma}^{(k)})^{-1}$, $(\boldsymbol{\Sigma}^{(k-1)})^{-1}$ is computed once and then with a few matrix multiplications and sums, the hundred inverses are obtained and a lot of processing time is saved.
 
-        In the case of a backward step in SFFS algorithm, the formula is inverted in order to compute $(\boldsymbol{\Sigma}^{(k-1)})^{-1}$ knowing $(\boldsymbol{\Sigma}^{(k)})^{-1}$. The update rule becomes
+        In the case of a backward step in SFFS algorithm, the formula is inverted in order to compute $(\boldsymbol{\Sigma}^{(k-1)})^{-1}$ knowing $(\boldsymbol{\Sigma}^{(k)})^{-1}$. The update rule becomes (proof in Appendix~\ref{app:proof-update})
         \begin{prop}
+        \label{eq:update-inv-back}
             (Backward update rule for inverse of covariance matrix)
             \begin{equation*}
-                \fbox{$(\boldsymbol{\Sigma}^{(k-1)})^{-1} = \textcolor[rgb]{0,0.5,0}{\mathbf{A}} - \alpha \mathbf{v} \mathbf{v}^t$}
+                (\boldsymbol{\Sigma}^{(k-1)})^{-1} = \textcolor[rgb]{0,0.5,0}{\mathbf{A}} - \alpha \mathbf{v} \mathbf{v}^t
             \end{equation*}
         \end{prop}
 
-        \begin{proof}
-            \begin{align*}
-                \mathbf{A} - \alpha \mathbf{v} \mathbf{v}^t
-                &= (\boldsymbol{\Sigma}^{(k-1)})^{-1} + \frac{1}{\alpha} (\boldsymbol{\Sigma}^{(k-1)})^{-1} \mathbf{u} \mathbf{u}^t (\boldsymbol{\Sigma}^{(k-1)})^{-1} \\
-                &~~~- \alpha (- \frac{1}{\alpha} (\boldsymbol{\Sigma}^{(k-1)})^{-1} \mathbf{u}) (- \frac{1}{\alpha} \mathbf{u}^t (\boldsymbol{\Sigma}^{(k-1)})^{-1})) \\
-                &= (\boldsymbol{\Sigma}^{(k-1)})^{-1}
-            \end{align*}
-        \end{proof}
-
-        A formula can also be deduced for the quadratical term of the decision function. Noting $(\mathbf{x}^{(k)})^t = \left[\begin{array}{cc} (\mathbf{x}^{(k-1)})^t   & x^k \end{array}\right]$, the following proposition is obtained
+        A formula can also be deduced for the quadratical term of the decision function. Noting $(\mathbf{x}^{(k)})^t = \left[\begin{array}{cc} (\mathbf{x}^{(k-1)})^t   & x^k \end{array}\right]$, the following proposition is obtained (proof in Appendix~\ref{app:proof-update})
         \begin{prop}
         \label{eq:update-quad}
             (Update rule for quadratical term)
-            \begin{empheq}[box=\fbox]{align*}
+            \begin{align*}
                 (\mathbf{x}^{(k)})^t (\boldsymbol{\Sigma}^{(k)})^{-1} \mathbf{x}^{(k)} = &\textcolor[rgb]{0,0.5,0}{(\mathbf{x}^{(k-1)})^t (\boldsymbol{\Sigma}^{(k-1)})^{-1} \mathbf{x}^{(k-1)}} \\
                 &+ \alpha ( \left[\begin{array}{cc} \mathbf{v}^t & \frac{1}{\alpha} \end{array}\right] \mathbf{x}^{(k)} )^2
-            \end{empheq}
-        \end{prop}
-
-        \begin{proof}
-            \begin{align*}
-                (&\mathbf{x}^{(k)})^t (\boldsymbol{\Sigma}^{(k)})^{-1} \mathbf{x}^{(k)}
-                = \left[\begin{array}{cc} (\mathbf{x}^{(k-1)})^t   & x_k \end{array}\right]
-                \left[\begin{array}{cc}
-                \mathbf{A}   & \mathbf{v} \\
-                \mathbf{v}^t & \frac{1}{\alpha}
-                \end{array}\right]
-                \left[\begin{array}{c} \mathbf{v} \\ x_k \end{array}\right] \\
-                &= \left[\begin{array}{cc} (\mathbf{x}^{(k-1)})^t \mathbf{A} + x_k \mathbf{v}^t & (\mathbf{x}^{(k-1)})^t \mathbf{v} + \frac{x_k}{\alpha} \end{array}\right]
-                \left[\begin{array}{c} \mathbf{v} \\ x_k \end{array}\right] \\
-                &= (\mathbf{x}^{(k-1)})^t \mathbf{A} \mathbf{x}^{(k-1)} + x_k \mathbf{v}^t \mathbf{x}^{(k-1)} + (\mathbf{x}^{(k-1)})^t \mathbf{v} x_k + \frac{(x_k)^2}{\alpha} \\
-                &= (\mathbf{x}^{(k-1)})^t ((\boldsymbol{\Sigma}^{(k-1)})^{-1} + \frac{1}{\alpha} (\boldsymbol{\Sigma}^{(k-1)})^{-1} \mathbf{u} \mathbf{u}^t (\boldsymbol{\Sigma}^{(k-1)})^{-1}) \mathbf{x}^{(k-1)}\\
-                &~~~+ 2 x_k \mathbf{v}^t \mathbf{x}^{(k-1)} + \frac{(x_k)^2}{\alpha} \\
-                &= (\mathbf{x}^{(k-1)})^t ((\boldsymbol{\Sigma}^{(k-1)})^{-1} + \alpha \mathbf{v} \mathbf{v}^t) \mathbf{x}^{(k-1)}\\
-                &~~~+ 2 x_k \mathbf{v}^t \mathbf{x}^{(k-1)} + \frac{(x_k)^2}{\alpha} \\
-                &= (\mathbf{x}^{(k-1)})^t (\boldsymbol{\Sigma}^{(k-1)})^{-1} \mathbf{x}^{(k-1)} + \alpha ( (\mathbf{x}^{(k-1)})^t \mathbf{v} \mathbf{v}^t \mathbf{x}^{(k-1)} \\
-                &~~~+ 2 \frac{x_k}{\alpha} \mathbf{v}^t \mathbf{x}^{(k-1)} + \frac{(x_k)^2}{\alpha^2}) \\
-                &= (\mathbf{x}^{(k-1)})^t (\boldsymbol{\Sigma}^{(k-1)})^{-1} \mathbf{x}^{(k-1)} + \alpha ( (\mathbf{x}^{(k-1)})^t \mathbf{v} + \frac{x_k}{\alpha} )^2 \\
-                &= (\mathbf{x}^{(k-1)})^t (\boldsymbol{\Sigma}^{(k-1)})^{-1} \mathbf{x}^{(k-1)} + \alpha ( \left[\begin{array}{cc} \mathbf{v}^t & \frac{1}{\alpha} \end{array}\right] \mathbf{x}^{(k)} )^2
             \end{align*}
-        \end{proof}
+        \end{prop}
 
         Finally, using the formula of the determinant of a block matrix and after taking the log, a last formula is produced
         \begin{prop}
         \label{eq:update-log}
             (Update rule for logdet)
             \begin{equation*}
-                \fbox{$\log \left(|\boldsymbol{\Sigma}^{(k)}|\right) = \textcolor[rgb]{0,0.5,0}{\log \left(|\boldsymbol{\Sigma}^{(k-1)}|\right)} + \log \alpha$}
+                \log \left(|\boldsymbol{\Sigma}^{(k)}|\right) = \textcolor[rgb]{0,0.5,0}{\log \left(|\boldsymbol{\Sigma}^{(k-1)}|\right)} + \log \alpha
             \end{equation*}
         \end{prop}
 
@@ -850,9 +817,43 @@ Finally, an improvement could be made to increase the stability of the selected 
 
 The python and C++ code are available freely for download: \url{https://github.com/Laadr/FFFS}, \url{https://github.com/Laadr/otbExternalFastFeaturesSelection}.
 
-% \appendices
-% \section{Proof of the First Zonklar Equation}
-% Appendix one text goes here.
+\appendices
+\section{}
+\label{app:proof-update}
+\subsection{Proof of update rules}
+    \subsubsection{Proposition~\ref{eq:update-inv-back}}
+        \begin{proof}
+            \begin{align*}
+                \mathbf{A} - \alpha \mathbf{v} \mathbf{v}^t
+                &= (\boldsymbol{\Sigma}^{(k-1)})^{-1} + \frac{1}{\alpha} (\boldsymbol{\Sigma}^{(k-1)})^{-1} \mathbf{u} \mathbf{u}^t (\boldsymbol{\Sigma}^{(k-1)})^{-1} \\
+                &~~~- \alpha (- \frac{1}{\alpha} (\boldsymbol{\Sigma}^{(k-1)})^{-1} \mathbf{u}) (- \frac{1}{\alpha} \mathbf{u}^t (\boldsymbol{\Sigma}^{(k-1)})^{-1})) \\
+                &= (\boldsymbol{\Sigma}^{(k-1)})^{-1}
+            \end{align*}
+        \end{proof}
+
+    \subsubsection{Proposition~\ref{eq:update-quad}}
+        \begin{proof}
+            \begin{align*}
+                (&\mathbf{x}^{(k)})^t (\boldsymbol{\Sigma}^{(k)})^{-1} \mathbf{x}^{(k)}
+                = \left[\begin{array}{cc} (\mathbf{x}^{(k-1)})^t   & x_k \end{array}\right]
+                \left[\begin{array}{cc}
+                \mathbf{A}   & \mathbf{v} \\
+                \mathbf{v}^t & \frac{1}{\alpha}
+                \end{array}\right]
+                \left[\begin{array}{c} \mathbf{v} \\ x_k \end{array}\right] \\
+                &= \left[\begin{array}{cc} (\mathbf{x}^{(k-1)})^t \mathbf{A} + x_k \mathbf{v}^t & (\mathbf{x}^{(k-1)})^t \mathbf{v} + \frac{x_k}{\alpha} \end{array}\right]
+                \left[\begin{array}{c} \mathbf{v} \\ x_k \end{array}\right] \\
+                &= (\mathbf{x}^{(k-1)})^t \mathbf{A} \mathbf{x}^{(k-1)} + x_k \mathbf{v}^t \mathbf{x}^{(k-1)} + (\mathbf{x}^{(k-1)})^t \mathbf{v} x_k + \frac{(x_k)^2}{\alpha} \\
+                &= (\mathbf{x}^{(k-1)})^t ((\boldsymbol{\Sigma}^{(k-1)})^{-1} + \frac{1}{\alpha} (\boldsymbol{\Sigma}^{(k-1)})^{-1} \mathbf{u} \mathbf{u}^t (\boldsymbol{\Sigma}^{(k-1)})^{-1}) \mathbf{x}^{(k-1)}\\
+                &~~~+ 2 x_k \mathbf{v}^t \mathbf{x}^{(k-1)} + \frac{(x_k)^2}{\alpha} \\
+                &= (\mathbf{x}^{(k-1)})^t ((\boldsymbol{\Sigma}^{(k-1)})^{-1} + \alpha \mathbf{v} \mathbf{v}^t) \mathbf{x}^{(k-1)}\\
+                &~~~+ 2 x_k \mathbf{v}^t \mathbf{x}^{(k-1)} + \frac{(x_k)^2}{\alpha} \\
+                &= (\mathbf{x}^{(k-1)})^t (\boldsymbol{\Sigma}^{(k-1)})^{-1} \mathbf{x}^{(k-1)} + \alpha ( (\mathbf{x}^{(k-1)})^t \mathbf{v} \mathbf{v}^t \mathbf{x}^{(k-1)} \\
+                &~~~+ 2 \frac{x_k}{\alpha} \mathbf{v}^t \mathbf{x}^{(k-1)} + \frac{(x_k)^2}{\alpha^2}) \\
+                &= (\mathbf{x}^{(k-1)})^t (\boldsymbol{\Sigma}^{(k-1)})^{-1} \mathbf{x}^{(k-1)} + \alpha ( (\mathbf{x}^{(k-1)})^t \mathbf{v} + \frac{x_k}{\alpha} )^2 \\
+                &= (\mathbf{x}^{(k-1)})^t (\boldsymbol{\Sigma}^{(k-1)})^{-1} \mathbf{x}^{(k-1)} + \alpha ( \left[\begin{array}{cc} \mathbf{v}^t & \frac{1}{\alpha} \end{array}\right] \mathbf{x}^{(k)} )^2
+            \end{align*}
+        \end{proof}
 
 % \section*{Acknowledgment}
 
